load usernames from history :hammer:

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,9 @@
-FILENAME: C:\Users\Administrator\Documents\UNESCO\monecolenligne.cm\Eric - 20210406\LISTE DES ELEVES DE L'ECOLE GEPPS CITE SIC\LISTE DES ELEVES DE L'ECOLE GEPPS CITE SIC.xlsx
-SAVE_PATH: C:\Users\Administrator\Documents\UNESCO\monecolenligne.cm\Eric - 20210406\LISTE DES ELEVES DE L'ECOLE GEPPS CITE SIC
+FILENAME: E:\UNESCO\monecolenligne.cm\Eric - 20210406\11. LISTE DES ELEVES GBPS BONAMOUSSADI 2 FRANCO\LISTE DES ELEVES GBPS BONAMOUSSADI 2 FRANCO.xlsx
+SAVE_PATH: E:\UNESCO\monecolenligne.cm\Eric - 20210406\11. LISTE DES ELEVES GBPS BONAMOUSSADI 2 FRANCO
 UPDATE_USERNAME: True
 UPDATE_NAMES: True
 UPDATE_PASSWORD: True
 EXPORT_CSV: True
 CSV_DELIMITER: ";"
+PASSWORD_LENGTH: 3
+
